# Termux_Token

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  link_parser.cpp  link_parser.h  native_bridge.cpp  text_utils.cpp  text_utils.h
app/src/main/java/com/example/pdfreader/: MainActivity.kt  PdfReaderApp.kt
app/src/main/java/com/example/pdfreader/data/: PdfPage.kt  PdfRepository.kt  TtsManager.kt
app/src/main/java/com/example/pdfreader/native/: NativeLib.kt
app/src/main/java/com/example/pdfreader/ui/: HomeScreen.kt
app/src/main/java/com/example/pdfreader/ui/reader/: PdfPageView.kt  ReaderScreen.kt  ReaderToolbar.kt  ReaderViewModel.kt  SelectionMenu.kt
app/src/main/java/com/example/pdfreader/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
